# cmu_tartanhacks26

./: .gitignore  BRANCH_STRATEGY.md  README.md  ai.cpp  ip.txt  jossue-context.md  main.cpp  pyproject.toml
archive/: main.cpp  old.main.cpp  user_app.cpp  user_app.h
backend/: ai_service.py  generate_variable_glue.py  server.py
firmware/: .gitignore  platformio.ini.example
firmware/include/: ai.h  ai_vars_gen.h
firmware/src/: ai.cpp  ai.h  main.cpp
mobile/: .gitignore
mobile/esp32controller/: .env.example  .gitignore  INTEGRATION_STRATEGY.md  LAYOUT_FIX_GUIDE.md  LAYOUT_REFACTOR_COMPLETE.md  PHASE2_GUIDE.md  README.md  REFACTOR_GUIDE.md  UI_SHELL_README.md  UX_ENHANCEMENTS.md  VOICE_INPUT.md  app.json  jest.config.js  jest.setup.js  package-lock.json  package.json  tailwind.config.js
mobile/esp32controller/.maestro/: led-control-flow.yaml
mobile/esp32controller/app/: _layout.tsx  control.tsx  diagnostics.tsx  index.tsx  modal.tsx  ota.tsx  ota.tsx.backup  review.tsx
mobile/esp32controller/docs/: CONTROLLER-SCREEN-COMPLETE.md  IMPLEMENTATION-COMPLETE.md  NATIVEWIND-SETUP-FIXES.md  QUICKSTART.md  STYLING-COMPLETE.md  STYLING-INSTALLATION.md  TESTING-COMPLETE.md  UI-STATE-IMPLEMENTATION-COMPLETE.md  architecture-diagram.md  deviceClient-summary.md  latency-controller-design.md  migration-guide.md  styling-guide.md  ui-contract.md  ui-state-model.md
mobile/esp32controller/maestro/: led-control-flow.yaml
test_dir/: firmware_pipeline.py  firmware_session.json  generate_variable_glue.py  regex_variable_extractor.py  simple_usage.py
(+51 files in other folders)
